fixed: placeholder not showing up (#85)

--- a/src/scss/nice-select2.scss
+++ b/src/scss/nice-select2.scss
@@ -262,7 +262,7 @@ $arrow_color: $gray !default;
   padding: 0;
   height: 0;
   font-size: 0;
-  min-height: "auto";
+  min-height: auto;
 }
 
 .select-selection-list {
